gen/MygrammarParser.py
# Generated from C:/Users/hanna/Desktop/yapis\Mygrammar.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MygrammarParser ( Parser ):

    grammarFileName = "Mygrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "' '", "'+'", "'-'", "'*'", "'/'", "'='", "'!='", "'=='", 
                     "'('", "')'", "','", "':'", "';'", "'.'", "'if('", 
                     "'else:'", "'for('", "'in'", "'****'", "'\\n'", "'\\t'", 
                     "'show('", "'return('", "'input()'" ]

    symbolicNames = [ "<INVALID>", "INT", "TYPE", "ID", "WHITESPACE", "PLUS", 
                      "MINUS", "MULT", "DIVIDER", "ASSIGN", "NEQ", "EQ", 
                      "LPAREN", "RPAREN", "COMMA", "COLON", "SEMI", "DOT", 
                      "IF", "ELSE", "FOR", "IN", "INSIDE", "NLINE", "TAB", 
                      "SHOW", "RETURN", "INPUT", "WS", "STR" ]

    RULE_program = 0
    RULE_func = 1
    RULE_func_statement = 2
    RULE_statement = 3
    RULE_equal = 4
    RULE_operation = 5
    RULE_change_type = 6
    RULE_sum = 7
    RULE_other_op = 8
    RULE_input = 9
    RULE_return_statement = 10
    RULE_show_statement = 11
    RULE_use_func = 12
    RULE_for_statement = 13
    RULE_if_statement = 14
    RULE_if_condition = 15

    ruleNames =  [ "program", "func", "func_statement", "statement", "equal", 
                   "operation", "change_type", "sum", "other_op", "input", 
                   "return_statement", "show_statement", "use_func", "for_statement", 
                   "if_statement", "if_condition" ]

    EOF = Token.EOF
    INT=1
    TYPE=2
    ID=3
    WHITESPACE=4
    PLUS=5
    MINUS=6
    MULT=7
    DIVIDER=8
    ASSIGN=9
    NEQ=10
    EQ=11
    LPAREN=12
    RPAREN=13
    COMMA=14
    COLON=15
    SEMI=16
    DOT=17
    IF=18
    ELSE=19
    FOR=20
    IN=21
    INSIDE=22
    NLINE=23
    TAB=24
    SHOW=25
    RETURN=26
    INPUT=27
    WS=28
    STR=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MygrammarParser.EOF, 0)

        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MygrammarParser.FuncContext)
            else:
                return self.getTypedRuleContext(MygrammarParser.FuncContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MygrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MygrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return MygrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MygrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 32
                    self.func() 
                self.state = 37
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34865160) != 0):
                self.state = 38
                self.statement()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(MygrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.ID)
            else:
                return self.getToken(MygrammarParser.ID, i)

        def LPAREN(self):
            return self.getToken(MygrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MygrammarParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(MygrammarParser.COLON, 0)

        def NLINE(self):
            return self.getToken(MygrammarParser.NLINE, 0)

        def INSIDE(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.INSIDE)
            else:
                return self.getToken(MygrammarParser.INSIDE, i)

        def func_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MygrammarParser.Func_statementContext)
            else:
                return self.getTypedRuleContext(MygrammarParser.Func_statementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.COMMA)
            else:
                return self.getToken(MygrammarParser.COMMA, i)

        def getRuleIndex(self):
            return MygrammarParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = MygrammarParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(MygrammarParser.ID)
            self.state = 47
            self.match(MygrammarParser.LPAREN)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 48
                self.match(MygrammarParser.ID)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 49
                    self.match(MygrammarParser.COMMA)
                    self.state = 50
                    self.match(MygrammarParser.ID)
                    self.state = 55
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 58
            self.match(MygrammarParser.RPAREN)
            self.state = 59
            self.match(MygrammarParser.COLON)
            self.state = 60
            self.match(MygrammarParser.NLINE)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 61
                self.match(MygrammarParser.INSIDE)
                self.state = 62
                self.func_statement()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==22):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(MygrammarParser.StatementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(MygrammarParser.Return_statementContext,0)


        def getRuleIndex(self):
            return MygrammarParser.RULE_func_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_statement" ):
                listener.enterFunc_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_statement" ):
                listener.exitFunc_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_statement" ):
                return visitor.visitFunc_statement(self)
            else:
                return visitor.visitChildren(self)




    def func_statement(self):

        localctx = MygrammarParser.Func_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_statement)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 18, 20, 25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.statement()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.return_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equal(self):
            return self.getTypedRuleContext(MygrammarParser.EqualContext,0)


        def use_func(self):
            return self.getTypedRuleContext(MygrammarParser.Use_funcContext,0)


        def show_statement(self):
            return self.getTypedRuleContext(MygrammarParser.Show_statementContext,0)


        def func(self):
            return self.getTypedRuleContext(MygrammarParser.FuncContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(MygrammarParser.For_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(MygrammarParser.If_statementContext,0)


        def NLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.NLINE)
            else:
                return self.getToken(MygrammarParser.NLINE, i)

        def getRuleIndex(self):
            return MygrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MygrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 71
                self.equal()
                pass

            elif la_ == 2:
                self.state = 72
                self.use_func()
                pass

            elif la_ == 3:
                self.state = 73
                self.show_statement()
                pass

            elif la_ == 4:
                self.state = 74
                self.func()
                pass

            elif la_ == 5:
                self.state = 75
                self.for_statement()
                pass

            elif la_ == 6:
                self.state = 76
                self.if_statement()
                pass


            self.state = 80 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 79
                    self.match(MygrammarParser.NLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 82 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.ID)
            else:
                return self.getToken(MygrammarParser.ID, i)

        def ASSIGN(self):
            return self.getToken(MygrammarParser.ASSIGN, 0)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MygrammarParser.OperationContext)
            else:
                return self.getTypedRuleContext(MygrammarParser.OperationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.COMMA)
            else:
                return self.getToken(MygrammarParser.COMMA, i)

        def getRuleIndex(self):
            return MygrammarParser.RULE_equal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqual" ):
                listener.enterEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqual" ):
                listener.exitEqual(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual" ):
                return visitor.visitEqual(self)
            else:
                return visitor.visitChildren(self)




    def equal(self):

        localctx = MygrammarParser.EqualContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_equal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MygrammarParser.ID)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 85
                self.match(MygrammarParser.COMMA)
                self.state = 86
                self.match(MygrammarParser.ID)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(MygrammarParser.ASSIGN)
            self.state = 93
            self.operation()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 94
                self.match(MygrammarParser.COMMA)
                self.state = 95
                self.operation()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def change_type(self):
            return self.getTypedRuleContext(MygrammarParser.Change_typeContext,0)


        def sum_(self):
            return self.getTypedRuleContext(MygrammarParser.SumContext,0)


        def use_func(self):
            return self.getTypedRuleContext(MygrammarParser.Use_funcContext,0)


        def other_op(self):
            return self.getTypedRuleContext(MygrammarParser.Other_opContext,0)


        def input_(self):
            return self.getTypedRuleContext(MygrammarParser.InputContext,0)


        def INT(self):
            return self.getToken(MygrammarParser.INT, 0)

        def getRuleIndex(self):
            return MygrammarParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)




    def operation(self):

        localctx = MygrammarParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_operation)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.change_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.sum_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.use_func()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.other_op()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.input_()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 106
                self.match(MygrammarParser.INT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Change_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(MygrammarParser.LPAREN, 0)

        def TYPE(self):
            return self.getToken(MygrammarParser.TYPE, 0)

        def RPAREN(self):
            return self.getToken(MygrammarParser.RPAREN, 0)

        def ID(self):
            return self.getToken(MygrammarParser.ID, 0)

        def getRuleIndex(self):
            return MygrammarParser.RULE_change_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChange_type" ):
                listener.enterChange_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChange_type" ):
                listener.exitChange_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChange_type" ):
                return visitor.visitChange_type(self)
            else:
                return visitor.visitChildren(self)




    def change_type(self):

        localctx = MygrammarParser.Change_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_change_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(MygrammarParser.LPAREN)
            self.state = 110
            self.match(MygrammarParser.TYPE)
            self.state = 111
            self.match(MygrammarParser.RPAREN)
            self.state = 112
            self.match(MygrammarParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.PLUS)
            else:
                return self.getToken(MygrammarParser.PLUS, i)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.LPAREN)
            else:
                return self.getToken(MygrammarParser.LPAREN, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.ID)
            else:
                return self.getToken(MygrammarParser.ID, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.RPAREN)
            else:
                return self.getToken(MygrammarParser.RPAREN, i)

        def getRuleIndex(self):
            return MygrammarParser.RULE_sum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSum" ):
                listener.enterSum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSum" ):
                listener.exitSum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum" ):
                return visitor.visitSum(self)
            else:
                return visitor.visitChildren(self)




    def sum_(self):

        localctx = MygrammarParser.SumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_sum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.state = 114
                self.match(MygrammarParser.LPAREN)
                self.state = 115
                self.match(MygrammarParser.ID)
                self.state = 116
                self.match(MygrammarParser.PLUS)
                self.state = 117
                self.match(MygrammarParser.ID)
                self.state = 118
                self.match(MygrammarParser.RPAREN)
                pass
            elif token in [3]:
                self.state = 119
                self.match(MygrammarParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 122
            self.match(MygrammarParser.PLUS)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.state = 123
                self.match(MygrammarParser.LPAREN)
                self.state = 124
                self.match(MygrammarParser.ID)
                self.state = 125
                self.match(MygrammarParser.PLUS)
                self.state = 126
                self.match(MygrammarParser.ID)
                self.state = 127
                self.match(MygrammarParser.RPAREN)
                pass
            elif token in [3]:
                self.state = 128
                self.match(MygrammarParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 131
                self.match(MygrammarParser.PLUS)
                self.state = 138
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [12]:
                    self.state = 132
                    self.match(MygrammarParser.LPAREN)
                    self.state = 133
                    self.match(MygrammarParser.ID)
                    self.state = 134
                    self.match(MygrammarParser.PLUS)
                    self.state = 135
                    self.match(MygrammarParser.ID)
                    self.state = 136
                    self.match(MygrammarParser.RPAREN)
                    pass
                elif token in [3]:
                    self.state = 137
                    self.match(MygrammarParser.ID)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Other_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.ID)
            else:
                return self.getToken(MygrammarParser.ID, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.INT)
            else:
                return self.getToken(MygrammarParser.INT, i)

        def PLUS(self):
            return self.getToken(MygrammarParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(MygrammarParser.MINUS, 0)

        def DIVIDER(self):
            return self.getToken(MygrammarParser.DIVIDER, 0)

        def MULT(self):
            return self.getToken(MygrammarParser.MULT, 0)

        def getRuleIndex(self):
            return MygrammarParser.RULE_other_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOther_op" ):
                listener.enterOther_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOther_op" ):
                listener.exitOther_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOther_op" ):
                return visitor.visitOther_op(self)
            else:
                return visitor.visitChildren(self)




    def other_op(self):

        localctx = MygrammarParser.Other_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_other_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not(_la==1 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 146
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 480) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 147
            _la = self._input.LA(1)
            if not(_la==1 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(MygrammarParser.INPUT, 0)

        def getRuleIndex(self):
            return MygrammarParser.RULE_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput" ):
                listener.enterInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput" ):
                listener.exitInput(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput" ):
                return visitor.visitInput(self)
            else:
                return visitor.visitChildren(self)




    def input_(self):

        localctx = MygrammarParser.InputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(MygrammarParser.INPUT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(MygrammarParser.RETURN, 0)

        def ID(self):
            return self.getToken(MygrammarParser.ID, 0)

        def RPAREN(self):
            return self.getToken(MygrammarParser.RPAREN, 0)

        def NLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.NLINE)
            else:
                return self.getToken(MygrammarParser.NLINE, i)

        def getRuleIndex(self):
            return MygrammarParser.RULE_return_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statement" ):
                listener.enterReturn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statement" ):
                listener.exitReturn_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_statement" ):
                return visitor.visitReturn_statement(self)
            else:
                return visitor.visitChildren(self)




    def return_statement(self):

        localctx = MygrammarParser.Return_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_return_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(MygrammarParser.RETURN)
            self.state = 152
            self.match(MygrammarParser.ID)
            self.state = 153
            self.match(MygrammarParser.RPAREN)
            self.state = 155 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 154
                    self.match(MygrammarParser.NLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 157 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(MygrammarParser.SHOW, 0)

        def RPAREN(self):
            return self.getToken(MygrammarParser.RPAREN, 0)

        def ID(self):
            return self.getToken(MygrammarParser.ID, 0)

        def STR(self):
            return self.getToken(MygrammarParser.STR, 0)

        def INT(self):
            return self.getToken(MygrammarParser.INT, 0)

        def use_func(self):
            return self.getTypedRuleContext(MygrammarParser.Use_funcContext,0)


        def getRuleIndex(self):
            return MygrammarParser.RULE_show_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_statement" ):
                listener.enterShow_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_statement" ):
                listener.exitShow_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_statement" ):
                return visitor.visitShow_statement(self)
            else:
                return visitor.visitChildren(self)




    def show_statement(self):

        localctx = MygrammarParser.Show_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_show_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(MygrammarParser.SHOW)
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 160
                self.match(MygrammarParser.ID)
                pass

            elif la_ == 2:
                self.state = 161
                self.match(MygrammarParser.STR)
                pass

            elif la_ == 3:
                self.state = 162
                self.match(MygrammarParser.INT)
                pass

            elif la_ == 4:
                self.state = 163
                self.use_func()
                pass


            self.state = 166
            self.match(MygrammarParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Use_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MygrammarParser.ID)
            else:
                return self.getToken(MygrammarParser.ID, i)

        def LPAREN(self):
            return self.getToken(MygrammarParser.LPAREN, 0)
